# tds-project-2-data-analyst-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tds_project.py  vercel.json
agent/: agent.py
agent/prompts/: prompts.py
tools/: tools.py
